# bytebrain

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  autogen_server.py  benchmark_ollama.py  benchmark_prompt.py  docker-compose.dev.yml  docker-compose.yml  main.py  ollama_client.py  pyproject.toml  test_ollama.py  tpm_story.json
.cache/41/: cache.db
AutogenBenchmarking/: README.md  ollama_client.py  ollama_test_config.yaml  pyproject.toml  test_config.yaml  test_ollama_models.sh  test_request.json
AutogenBenchmarking/ag_benchmarking/: __init__.py  api.py  benchmark_runner.py  cli.py
AutogenBenchmarking/ag_benchmarking/data/benchmarks/: benchmark_20241225_185304.json  benchmark_20241225_185323.json  benchmark_20241225_185407.json  benchmark_20241225_185434.json  benchmark_20241225_185456.json  benchmark_20241225_185519.json  benchmark_20241225_185539.json  benchmark_20241225_185646.json  benchmark_20241225_185708.json  benchmark_20241225_185730.json  benchmark_20241225_185758.json  benchmark_20241225_185816.json  benchmark_20241225_193015.json  benchmark_20241225_193035.json  benchmark_20241225_193048.json  benchmark_20241225_193058.json  benchmark_20241225_193111.json  benchmark_20241225_193216.json  benchmark_20241225_193248.json  benchmark_20241225_193314.json  benchmark_20241225_193326.json  benchmark_20241225_193333.json  benchmark_20241225_193340.json  benchmark_20241225_193403.json  benchmark_20241225_193514.json  benchmark_20241225_193522.json  benchmark_20241225_194253.json  benchmark_20241225_194304.json  benchmark_20241225_194329.json  benchmark_20241225_194341.json  benchmark_20241225_194419.json  benchmark_20241225_194447.json  benchmark_20241225_194518.json  benchmark_20241226_023135.json  benchmark_20241226_023202.json  benchmark_20241226_023232.json  benchmark_20241226_023257.json  benchmark_20241226_023323.json  benchmark_20241226_023341.json  benchmark_20241226_023400.json  (+13 more)
AutogenBenchmarking/ag_benchmarking/models/: ag_benchmark.py  agent_config.py
AutogenBenchmarking/ag_benchmarking/routers/: ag_benchmarks.py
AutogenBenchmarking/ag_benchmarking/services/: ag_benchmark.py  ag_client.py
AutogenBenchmarking/ag_benchmarking/templates/: ag_benchmark.html  autogen_benchmark.html
NovaSystem_Benchmarking/: .gitignore  README.md  example.py  pyproject.toml
NovaSystem_Benchmarking/novasystem_benchmarking/: __init__.py  __main__.py  cli.py
NovaSystem_Benchmarking/novasystem_benchmarking/data/: prompt_library.json
NovaSystem_Benchmarking/novasystem_benchmarking/models/: benchmark.py
NovaSystem_Benchmarking/novasystem_benchmarking/routers/: benchmarks.py
NovaSystem_Benchmarking/novasystem_benchmarking/services/: benchmark.py  ollama_client.py  stream.py
NovaSystem_Benchmarking/novasystem_benchmarking/static/: style.css
NovaSystem_Benchmarking/novasystem_benchmarking/templates/: benchmark.html
app/: __init__.py  main.py
app/data/: benchmark_20241225_122354.json  benchmark_results_20241225_122126.json  prompt_library.json
app/data/benchmarks/: benchmark_20241225_222048.json  benchmark_20241225_222126.json  benchmark_20241225_222310.json
app/data/pangram/: benchmark_20241225_122858.json
app/data/user_prompts/: benchmark_20241225_123035.json  benchmark_20241225_123351.json  benchmark_20241225_123512.json  benchmark_20241225_123515.json  benchmark_20241225_123828.json
app/models/: __init__.py  benchmark.py
app/routers/: __init__.py  benchmarks.py
app/services/: __init__.py  benchmark.py  storage.py
app/static/: style.css
app/templates/: index.html
archive/: model_comparison.py  sample_data.json  test_model_comparison.py
archive/ollama_model_benchmarker/: __init__.py
archive/openai_python_airlock/: main.py
archive/openai_python_airlock/chats/2024-03-30_16-41-09/: chat_data.json  chat_log.md  chat_log.txt
archive/openai_python_airlock/chats/2024-03-30_16-55-30/: chat_data.json  chat_log.md  chat_log.txt
archive/sveltekit-router/: package-lock.json  package.json
auto_chat/: __init__.py  auto_command.py  context_manager.py  model_handler.py  session_manager.py  turn_manager.py
autogen_ollama/: autogen_chat.py
bots/: __init__.py  benchmarking.py  ollama_bot.py
examples/: nova_chat.py  test_wizardlm2.py
models/: ag_benchmark.py
nova_system/: __init__.py  agents.py  core.py  interface.py
routers/: ag_benchmarks.py
services/: ag_benchmark.py
templates/: index.html
tests/: test_ag_benchmark.py  test_api.sh  test_auto_command.py  test_benchmark.py  test_benchmark_integration.py  test_benchmarks.py  test_nova_system.py  test_ollama_bot.py  test_ollama_client.py
workspace/: app.py  results.txt
(+13 files in other folders)
