[tool.poetry]
name = "ag-benchmarking"
version = "0.1.0"
description = "A benchmarking system for Autogen agents and conversations"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.4.2"
pyautogen = {extras = ["ollama"], version = "^0.2.0"}
python-dotenv = "^1.0.0"
psutil = "^5.9.6"
anthropic = "^0.5.0"
openai = "^1.3.0"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
sse-starlette = "^1.6.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"